# deltalytix-api

./: .env.example  .gitignore  Builder.dockerfile  CELERY.md  CMakeLists.txt  Dockerfile  Dockerfile.builder  LICENSE  README.md  cmake_install.cmake  docker-compose.yml  requirements.txt
app/: celery_app.py  main.py  tasks.py  websocket.py
app/api/: endpoints.py
app/api/routes/: accounts.py  manual_orders.py  orders.py  servers.py  websocket.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: trade.py  websocket.py
app/services/: account_service.py  manual_order_service.py  order_service.py  redis_service.py  rithmic_orders_retrieval.py  temp_storage_service.py  trade_service.py  websocket_service.py
app/utils/: logging.py
builder/: GetAccountList.cpp  OrderFetcher copy.cpp
cpp/: README.md
cpp/src/: rapi_wrapper.cpp
nginx/conf.d/: default.conf
